fixed navbar items alignment

--- a/src/styling/layout.scss
+++ b/src/styling/layout.scss
@@ -6,12 +6,13 @@
 .navbar {
 	color: $main-font-color;
 	background-color: $main-background-color;
-	padding: 20px;
+	padding: 0;
 	height: 100vh;
 	width: 100vw;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	align-items: center;
 	font-size: 40px;
 	position: fixed;
 	top: 0;
@@ -72,7 +73,7 @@
 	}
 
 	@include forBiggerMobile {
-		max-width: 470px ;
+		max-width: 470px;
 	}
 
 	@include forTablet {
